--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -1034,7 +1034,6 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Queue\Index.cshtml" />
     <Content Include="Views\Account\CreateController.cshtml" />
     <Content Include="Views\Shared\_LayoutLogIn.cshtml" />
     <Content Include="Views\Employees\CreateDriver.cshtml" />
@@ -1081,6 +1080,8 @@
     <Content Include="Views\GatePass\CheckIn.cshtml" />
     <Content Include="Views\Notifications\AllNotification.cshtml" />
     <Content Include="Views\Language\Index.cshtml" />
+    <Content Include="Views\Shared\_ControllerNotification.cshtml" />
+    <Content Include="Views\Shared\_EmployeeNotification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
