--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -1083,9 +1083,8 @@
     <Content Include="Views\Language\Index.cshtml" />
     <Content Include="Views\Shared\_ControllerNotification.cshtml" />
     <Content Include="Views\Shared\_EmployeeNotification.cshtml" />
-    <Content Include="Views\HoldRequisition\Hold.cshtml" />
+    <Content Include="Views\HoldRequisition\Create.cshtml" />
     <Content Include="Views\HoldRequisition\Index.cshtml" />
-    <Content Include="Views\HoldRequisition\HoldRequestCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
