--- a/RMS.App/packages.config
+++ b/RMS.App/packages.config
@@ -29,6 +29,8 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
@@ -40,12 +42,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Moment.js" version="2.9.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="ReportViewerForMvc" version="1.1.1" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="Twilio" version="5.19.0" targetFramework="net452" />
   <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
   <package id="Unity.Container" version="5.7.0" targetFramework="net452" />
   <package id="Unity.Mvc" version="5.0.13" targetFramework="net452" />
