--- a/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
+++ b/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IManager.cs" />
     <Compile Include="INotificationManager.cs" />
     <Compile Include="IOrganizationManager.cs" />
+    <Compile Include="IReplyManager.cs" />
     <Compile Include="IRequisitionHistoryManager.cs" />
     <Compile Include="IRequisitionManager.cs" />
     <Compile Include="IRequisitionStatusManager.cs" />
