--- a/RMS.BLL/RMS.BLL.csproj
+++ b/RMS.BLL/RMS.BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="NotificationManager.cs" />
     <Compile Include="OrganizationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReplyManager.cs" />
     <Compile Include="RequisitionHistoryManager.cs" />
     <Compile Include="RequisitionManager.cs" />
     <Compile Include="RequisitionStatusManager.cs" />
