--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -106,6 +106,7 @@
     <Compile Include="EntityModels\MailService.cs" />
     <Compile Include="EntityModels\Notification.cs" />
     <Compile Include="EntityModels\Organization.cs" />
+    <Compile Include="EntityModels\Reply.cs" />
     <Compile Include="EntityModels\Requisition.cs" />
     <Compile Include="EntityModels\RequisitionHistory.cs" />
     <Compile Include="EntityModels\RequisitionStatus.cs" />
@@ -300,6 +301,14 @@
     <Compile Include="Migrations\201810160138553_feedbackModel added datetime.Designer.cs">
       <DependentUpon>201810160138553_feedbackModel added datetime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810160955426_Reply Model Added.cs" />
+    <Compile Include="Migrations\201810160955426_Reply Model Added.Designer.cs">
+      <DependentUpon>201810160955426_Reply Model Added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810161017278_Reply Model Added DateTime.cs" />
+    <Compile Include="Migrations\201810161017278_Reply Model Added DateTime.Designer.cs">
+      <DependentUpon>201810161017278_Reply Model Added DateTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\AssignRequisitionReportVM.cs" />
@@ -442,6 +451,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810160138553_feedbackModel added datetime.resx">
       <DependentUpon>201810160138553_feedbackModel added datetime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810160955426_Reply Model Added.resx">
+      <DependentUpon>201810160955426_Reply Model Added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810161017278_Reply Model Added DateTime.resx">
+      <DependentUpon>201810161017278_Reply Model Added DateTime.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
