--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -311,6 +311,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\AssignReportVM.cs" />
     <Compile Include="Report\AssignRequisitionReportVM.cs" />
   </ItemGroup>
   <ItemGroup>
