Assign Report Rdlc Added

--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -1109,6 +1109,7 @@
     <Content Include="Views\Feedback\Edit.cshtml" />
     <Content Include="Views\Reply\Create.cshtml" />
     <Content Include="Views\AssignRequisitions\PrintAssignRequisition.cshtml" />
+    <Content Include="Views\Requisitions\PrintAssignRequisition.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
