--- a/RMS.App/Web.config
+++ b/RMS.App/Web.config
@@ -12,7 +12,7 @@
   <!--parvaz Connection string-->
   
   <connectionStrings>
-    <add name="RmsDbContext" connectionString="Server=DESKTOP-PQILVIV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="RmsDbContext" connectionString="Server=.\SQLEXPRESS; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <!--Chitto Connection string-->
